Checkpoint - improved tooltips, minor look and feel fixes, stable handling of multiple ots instances through Desktop Icons; Console improvements with anchors and custom triggers. Subsystem Launcher is stable for monitoring, but not control yet.

--- a/WebGUI/css/Desktop.css
+++ b/WebGUI/css/Desktop.css
@@ -210,6 +210,9 @@
 		cursor: 				pointer;
 	}
 		
+	#Desktop .DesktopIcons-folderDiv {
+		z-index: 				99900;
+	}
 	/* for mouse over highlighting */
 	#Desktop .DesktopIcons-folderDiv .myOption:hover {
 		background-color: 		rgb(213, 227, 245);
