--- a/WebGUI/css/SubsystemLaunch.css
+++ b/WebGUI/css/SubsystemLaunch.css
@@ -72,19 +72,38 @@
 			font-family: "Comfortaa", arial;
 		} */
 
+		
+
 		#startButtonDiv {
+			width: 100px;	
+		} 
+		
+		.greenBigButton {
 			background-color: rgb(48, 191, 48);
 			box-shadow: inset rgba(254,255,255,0.6) 0 0.3em .3em,
 					inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */
 					rgb(76, 141, 76) 0 .1em 3px,
 					0px 10px 0px rgb(23, 107, 23);
-			border-radius: 300px/200px;
-			width: 100px;					
+			border-radius: 300px/200px;							
 			text-align:center;
 			font-size: 30px;
 			font-family: arial;
 			color: white;
 			text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
+		}
+
+		.redBigButton {
+			background-color: red;
+			box-shadow: inset rgba(255,254,255,0.6) 0 0.3em .3em,
+					inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */
+					rgb(141, 76, 76) 0 .1em 3px,
+					0px 10px 0px rgb(107, 23, 23);
+			border-radius: 300px/200px;
+			text-align:center;
+		    font-size: 30px;
+		    font-family: arial;
+		    color: white;
+		    text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
 		}
 		
 		#startButtonDiv:active {
@@ -141,6 +160,7 @@
 		/* ===================== Subsystem status div section ================= */
 
 		#subsystemDiv table {
+			width: 100%;
 			border-radius: 10px;
 			border: 1px solid gray;
 			background-color: rgb(245, 245, 245);		
@@ -167,6 +187,66 @@
 		#subsystemDiv select {
 			text-align: center;
 		}
+
+		#subsystemDiv .power_button {
+			/*  design the outer circle */
+			width: 150px;
+			height: 150px;
+			border-radius: 50%;
+			border: 1px solid #ddd;
+			box-shadow: 0 0 5px 0px #888;
+		  
+			/*  required to position children elements */
+			position: relative;
+		  
+			/*  required to center elements*/
+			display: grid;
+			place-items: center;
+		  }
+		  
+		  #subsystemDiv  .power_button::before {
+			/*  pseudo-elements don't display if content property is not declared */
+			content: "";
+		  
+			/*  design the inner-ring */
+			width: 50%;
+			height: 50%;
+			border: 10px solid #eee;
+			border-radius: 50%;
+			position: absolute;
+		  }
+		  
+		  #subsystemDiv  .power_light {
+			/*  design the vertical light */
+			height: 30%;
+			width: 10px;
+			background: #eee;
+			border-radius: 10px;
+		  
+			/*  position the light correctly */
+			position: absolute;
+			top: 20px;
+		  
+			/*  required to give white-space to inner-ring */
+			box-shadow: 0 0 0 10px #fff;
+		  }
+		  
+		  #subsystemDiv  .power_button:hover {
+			cursor: pointer;
+		  }
+		  
+		  #subsystemDiv  .power_button:active {
+			box-shadow: 0 0 10px 0px #888 inset;
+		  }
+		  
+		  #subsystemDiv  .power_button:active .light {
+			background: lightgreen;
+		  }
+		  
+		  #subsystemDiv  .power_button:active::before {
+			border-color: lightgreen;
+		  }
+		  
 
 		/* ===================== end Subsystem status div section  */
 		
