Added manual system FSM action, using new target active FSM info - which is important in cases where the Iterator holds the FSM

--- a/WebGUI/css/SubsystemLaunch.css
+++ b/WebGUI/css/SubsystemLaunch.css
@@ -196,6 +196,7 @@
 			padding: 1px 5px;
 			font-family: 'Inconsolata';
 			cursor: pointer;
+			margin-left: -20px;
 		}
 
 		#subsystemDiv .power_button {
